style: chaged style of the tabs.

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -27,9 +27,9 @@
 </ion-menu>
 
 <ion-tabs color="primary" class="tabs" #content>
-  <ion-tab [root]="tab1Root" tabtitle="Chamados" tabIcon="md-construct"></ion-tab>
-  <ion-tab [root]="tab2Root" tabtitle="Almoço" tabIcon="md-restaurant"></ion-tab>
-  <ion-tab [root]="tab3Root" tabtitle="Home" tabIcon="md-home"></ion-tab>
-  <ion-tab [root]="tab4Root" tabtitle="Abastecimento" tabIcon="ios-funnel"></ion-tab>
-  <ion-tab [root]="tab5Root" tabtitle="Outros" tabIcon="md-apps"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Chamados" tabIcon="md-construct"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Almoço" tabIcon="md-restaurant"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Empresa" tabIcon="md-home"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Abastecimento" tabIcon="ios-funnel"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Outros" tabIcon="md-apps"></ion-tab>
 </ion-tabs>
