--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -45,7 +45,7 @@
           <ion-col col-12>
             <p>
               <ion-icon name="pin" color="primary"></ion-icon>
-              {{ atendimento.endereco.cidade +' - ' + atendimento.endereco.uf +', ' + atendimento.endereco.cep }}
+              {{ atendimento.endereco.cidade +' - ' + atendimento.endereco.uf +', ' + cepMask(atendimento.endereco.cep) }}
             </p>
           </ion-col>
 
